@@ -44,3 +44,5 @@
 #define CmdBuildPhobos   0x110
 #define CmdShowProfile   0x111
 #define CmdShowWebsite   0x112
+
+#define CmdDeleteFile    0x113
